CHANGES.txt - 2008-12-05
------------------------

CHANGES IN CUPS V1.4b2

	- Documentation updates (STR #2983, STR #2998)
	- The scheduler could hang writing a long log line.
	- The cupsGetDevices() function now has an "include_schemes"
	  parameter.
	- The lpinfo command now supports --include-schemes and
	  --exclude-schemes options.
	- The CUPS-Get-PPDs operation now supports the include-schemes
	  and exclude-schemes attributes.
        - The CUPS-Get-Devices operation now supports the include-schemes
	  attribute.
	- The print filters now support a replacement for the fitplot
	  option called "fit-to-page".
	- The LPD backend no longer tries to collect page accounting
	  information since the LPD protocol does not allow us to
	  prevent race conditions.
	- The scheduler did not save the last marker-change-time value.
	- Fixed a problem with printing to some IPP printers, including
	  CUPS 1.1.x.
	- Fixed a redirection problem with the printer web page (STR #3012)
	- Fixed a PPD compiler problem with the loading of message
	  catalogs (STR #2990)
	- Fixed a PPD compiler problem with the loading of .strings files
	  (STR #2989)
	- The cupsfilter utility did not set the CONTENT_TYPE environment
	  variable when running filters.
	- The scheduler now waits to allow system sleep until the jobs
	  have all stopped.
	- The IPP, LPD, and socket backends used different "connecting"
	  progress messages.


CHANGES IN CUPS V1.4b1

	- Documentation updates (STR #2567)
	- The PPD compiler now allows local message catalogs to
	  override the standard CUPS translations (STR #2642)
	- The ppdmerge command did not merge custom option strings
	  (STR #2863)
	- The scheduler now supports the Hold-New-Jobs and
	  Release-Held-New-Jobs operations; these are exposed via the
	  cupsdisable and cupsenable commands (STR #2332)
	- The lpstat command is now much faster when displaying the
	  status of a single printer (STR #2843)